# photos-manager

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  build.sh  docker-build.sh  docker-compose.yml  gpg.key  pyproject.toml
.github/workflows/: build-deb.yml
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
debian/: changelog  control  photos-manager-cli.links  rules
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Release
docs/: nas-setup.md
photos_manager/: __init__.py  cli.py  common.py  dedup.py  exifdates.py  find.py  fixdates.py  index.py  info.py  locate.py  manifest.py  mkjson.py  mkversion.py  prepare.py  sequences.py  series.py  setmtime.py  sync.py  verify.py
tests/: __init__.py  conftest.py  test_cli.py  test_common.py  test_dedup.py  test_exifdates.py  test_find.py  test_fixdates.py  test_index.py  test_info.py  test_locate.py  test_manifest.py  test_mkjson.py  test_mkversion.py  test_prepare.py  test_sequences.py  test_series.py  test_setmtime.py  test_sync.py  test_verify.py
