[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "photos-manager-cli"
description = "Modern CLI tool for managing photo archives with comprehensive testing (120 tests, 85% coverage)"
readme = "README.md"
keywords = [
  "archive",
  "backup",
  "cli",
  "hash",
  "metadata",
  "photo-management",
  "photos",
  "verification",
]
license = "MIT"
authors = [
  { name = "Jacek Kosiński", email = "jacek.kosinski@softflow.tech" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Archiving",
  "Topic :: Utilities",
]
dynamic = [ "version" ]
dependencies = [
  # Project uses only Python standard library
]

optional-dependencies.dev = [
  "commitizen>=4,<5",
  "interrogate>=1.5,<2",
  "mkdocs-material>=9.5,<10",
  "mypy>=1.8,<2",
  "pre-commit>=3.6,<4",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=4.1,<5",
  "pytest-mock>=3.12,<4",
  "ruff>=0.7,<1",
  "xenon>=0.9,<1",
]
urls.Changelog = "https://github.com/softflow-tech/photos-manager/blob/master/CHANGELOG.md"
urls.Homepage = "https://github.com/softflow-tech/photos-manager"
urls.Issues = "https://github.com/softflow-tech/photos-manager/issues"
urls.Repository = "https://github.com/softflow-tech/photos-manager"

# Poetry configuration (used for dependency management)
# Note: Build system uses setuptools (see [build-system] above)
scripts.photos = "photos_manager.cli:main"

[tool.poetry]
name = "photos-manager-cli"
version = "0.3.0"                                             # NOTE: Keep in sync with photos_manager/__version__
description = "Modern CLI tool for managing photos"
authors = [ "Jacek Kosiński <jacek.kosinski@softflow.tech>" ]
packages = [ { include = "photos_manager" } ]

[tool.poetry.dependencies]
python = "^3.12"
# No runtime dependencies - project uses only Python standard library

[tool.poetry.group.dev.dependencies]

[tool.setuptools.dynamic]
version = { attr = "photos_manager.__version__" }

[tool.ruff]
target-version = "py312"
line-length = 100
src = [ ".", "tests" ]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"

# Ruff linting rules
lint.select = [
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle (docstrings)
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PTH", # flake8-use-pathlib
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit (security)
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "D203", # one-blank-line-before-class (conflicts with D211)
  "D213", # multi-line-summary-second-line (conflicts with D212)
  "S603", # subprocess without shell=True is safe
  "S607", # starting process with partial path is OK in controlled environment
  "T201", # print() is allowed in CLI tools
]
lint.per-file-ignores."__init__.py" = [ "D104" ] # Ignore missing docstring in __init__.py
lint.per-file-ignores."tests/**/*.py" = [ "ARG", "D", "S101" ] # Ignore docstring, assert, and unused args in tests
lint.pydocstyle.convention = "google"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,*.lock'
check-hidden = true
ignore-words-list = 'asend'

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [ "tests" ]
python_files = [ "test_*.py", "*_test.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = [
  "-v",
  "--strict-markers",
  "--strict-config",
  "--cov=photos_manager",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-branch",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = [ "photos_manager" ]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85 # Enforce minimum coverage threshold
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# interrogate configuration (docstring coverage)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# pytest configuration

[tool.interrogate]
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = [ "setup.py", "docs", "build", "tests" ]
ignore-regex = [ "^get$", "^mock_.*", ".*BaseClass.*" ]
verbose = 1
quiet = false
whitelist-regex = [  ]
color = true
omit-covered-files = false
generate-badge = "."
badge-format = "svg"
style = "google"

# bandit configuration (security linter)

[tool.bandit]
exclude_dirs = [
  "tests",
  ".venv",
  "venv",
  "build",
  "dist",
  ".git",
  "__pycache__",
]
skips = [
  "B101", # assert_used - allow asserts in tests
]

# commitizen configuration (version bumping and changelog)

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_scheme = "semver"
update_changelog_on_bump = true
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_files = [
  "photos_manager/__init__.py:__version__",
  "pyproject.toml:[tool.poetry]",
]
