[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "photos-manager-cli"
description = "Modern CLI tool for managing photo archives with comprehensive testing"
readme = "README.md"
keywords = [
  "archive",
  "backup",
  "cli",
  "hash",
  "metadata",
  "photo-management",
  "photos",
  "verification",
]
license = "MIT"
authors = [
  { name = "Jacek Kosiński", email = "jacek.kosinski@softflow.tech" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Archiving",
  "Topic :: Utilities",
]
dynamic = [ "version" ]
dependencies = [
  # Project uses only Python standard library
  "tabulate>=0.10,<0.11"
]
optional-dependencies.dev = [
  "commitizen>=4,<5",
  "interrogate>=1.5,<2",
  "mkdocs-material>=9.5,<10",
  "mypy>=1.19,<2",
  "pre-commit>=3.6,<4",
  "pytest>=8,<9",
  "pytest-cov>=4.1,<5",
  "pytest-mock>=3.12,<4",
  "ruff>=0.15,<1",
  "xenon>=0.9,<1",
]
optional-dependencies.exif = [
  "piexif>=1.1,<2",       # Pure Python EXIF reader
  "pillow>=10,<12",       # Image formats + EXIF
  "pillow-heif>=0.11,<1", # HEIF/HEIC support
]
urls.Changelog = "https://github.com/softflow-tech/photos-manager/blob/master/CHANGELOG.md"
urls.Homepage = "https://github.com/softflow-tech/photos-manager"
urls.Issues = "https://github.com/softflow-tech/photos-manager/issues"
urls.Repository = "https://github.com/softflow-tech/photos-manager"
# Poetry configuration (used for dependency management)
# Note: Build system uses setuptools (see [build-system] above)
scripts.photos = "photos_manager.cli:main"

[dependency-groups]
dev = [ "types-tabulate>=0.10.0.20260308,<0.11" ]

[tool.poetry]
version = "0.5.0"  # NOTE: Keep in sync with photos_manager/__version__
packages = [ { include = "photos_manager" } ]

[tool.setuptools]
# No runtime dependencies - project uses only Python standard library

dynamic.version = { attr = "photos_manager.__version__" }

[tool.ruff]
target-version = "py312"
line-length = 100
src = [ ".", "tests" ]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
# Ruff linting rules
lint.select = [
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle (docstrings)
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PTH", # flake8-use-pathlib
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit (security)
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "D203", # one-blank-line-before-class (conflicts with D211)
  "D213", # multi-line-summary-second-line (conflicts with D212)
  "S603", # subprocess without shell=True is safe
  "S607", # starting process with partial path is OK in controlled environment
  "T201", # print() is allowed in CLI tools
]
lint.per-file-ignores."__init__.py" = [ "D104" ]
lint.per-file-ignores."tests/**/*.py" = [ "ARG", "D", "S101" ]
lint.pydocstyle.convention = "google"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = ".git*,*.svg,*.lock"
check-hidden = true
ignore-words-list = "asend"

[tool.pytest]
ini_options.minversion = "8.0"
ini_options.testpaths = [ "tests" ]
ini_options.python_files = [ "test_*.py", "*_test.py" ]
ini_options.python_classes = [ "Test*" ]
ini_options.python_functions = [ "test_*" ]
ini_options.addopts = [
  "-v",
  "--strict-markers",
  "--strict-config",
  "--cov=photos_manager",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-branch",
]
ini_options.markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[tool.coverage]
run.omit = [
  "*/.venv/*",
  "*/__pycache__/*",
  "*/test_*.py",
  "*/tests/*",
]
run.source = [ "photos_manager" ]
report.exclude_lines = [
  "@(abc\\.)?abstractmethod",
  "class .*\\bProtocol\\):",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]
report.fail_under = 85  # Enforce minimum coverage threshold
report.precision = 2
report.show_missing = true
report.skip_covered = false
html.directory = "htmlcov"

# interrogate configuration (docstring coverage)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [ "tests.*", "tests.conftest" ]
disallow_untyped_defs = false
disable_error_code = "arg-type,var-annotated,untyped-decorator"

[[tool.mypy.overrides]]
module = [ "piexif", "pillow_heif", "tabulate" ]
ignore_missing_imports = true

# pytest configuration

[tool.interrogate]
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = [ "setup.py", "docs", "build", "tests" ]
ignore-regex = [ "^get$", "^mock_.*", ".*BaseClass.*" ]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "."
badge-format = "svg"
style = "google"

# bandit configuration (security linter)

[tool.bandit]
exclude_dirs = [
  "tests",
  ".venv",
  "venv",
  "build",
  "dist",
  ".git",
  "__pycache__",
]
skips = [
  "B101", # assert_used - allow asserts in tests
]

# commitizen configuration (version bumping and changelog)

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
version_scheme = "semver"
update_changelog_on_bump = true
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_files = [
  "photos_manager/__init__.py:__version__",
  "pyproject.toml:[tool.poetry]",
]
